Fixed alignment issue with dashboard title

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@
 #side-bar .title{
     display: grid;
     grid-template-rows: repeat(1, minmax(50px, 1fr));
-    grid-template-columns: repeat(1, minmax(20px, .20fr)) repeat(1, minmax(50px, 1fr));
+    grid-template-columns: repeat(1, minmax(20px, .15fr)) repeat(1, minmax(50px, 1fr));
     align-items: center;
     padding: 5%;
     margin-top: 5%;
@@ -48,7 +48,7 @@
     margin-top: 5%;
 }
 
-#side-bar a, #side-bar H1{
+#side-bar a{
     color: white;
     padding-left: 10%;
     font-family: var(--font);
@@ -67,13 +67,13 @@
 #top-bar{
     background-color: rgb(255, 255, 255);
     height: 20vh;
-    box-shadow: 0px 0px 30px rgb(94, 90, 90);
+    box-shadow: 0px 0px 15px rgb(94, 90, 90);
     position: relative;
     z-index: 1;
 }
 
 main{
-    background-color: rgb(199, 197, 194);
+    background-color: rgb(213, 215, 218);
     height: 80vh;
     position: relative;
     z-index: 0;
